--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -12,12 +12,14 @@ library(highcharter)
 library(tidyverse)
 library(lubridate)
 
-dataset = read_csv("data.csv")
+dataset = read_rds("dataset.rds")
 
 # functions
 get_trx_wday_vs_hour_heatmap = function(desc) {
+  sc = which(dataset$description == desc)[1]
+  
   df = dataset %>%
-    filter(description == desc) %>%
+    filter(stockcode == dataset$stockcode[[sc]]) %>%
     mutate(
       wday = wday(invoicedate, label = T),
       hour = hour(invoicedate)
@@ -46,8 +48,10 @@ get_trx_wday_vs_hour_heatmap = function(desc) {
 }
 
 get_trx_history_chart = function(desc) {
+  sc = which(dataset$description == desc)[1]
+  
   df = dataset %>%
-    filter(description == desc) %>%
+    filter(stockcode == dataset$stockcode[[sc]]) %>%
     transmute(
       stockcode,
       invoicedate = invoicedate %>%
@@ -83,8 +87,10 @@ get_trx_history_chart = function(desc) {
 }
 
 get_trx_by_country_chart = function(desc) {
+  sc = which(dataset$description == desc)[1]
+  
   df = dataset %>%
-    filter(description == desc, country != "United Kingdom") %>%
+    filter(stockcode == dataset$stockcode[[sc]], country != "United Kingdom") %>%
     select(country, quantity) %>%
     group_by(country) %>%
     summarise(quantity = sum(quantity)) %>%
@@ -112,7 +118,7 @@ Sidebar {.sidebar data-width=330}
 
 Analysis on purchased items from UK-based and registered non-store online retail. All transactions on this analysis occur between 01/12/2010 and 09/12/2011. For more information about the dataset for this analysis, please have a look at [this link](http://archive.ics.uci.edu/ml/datasets/online+retail). 
 
-Items available are limited using [80/20 rule](https://en.wikipedia.org/wiki/Pareto_principle). More detail about how to do it, have a look at source code [here](https://raw.githubusercontent.com/iamsniffles/item-analysis-dashboard-demo/master/dashboard.Rmd).
+Items available are limited using [80/20 rule](https://en.wikipedia.org/wiki/Pareto_principle). More detail about how to do it, have a look at source code [here](https://github.com/iamsniffles/item-analysis-dashboard-demo/blob/master/pre-process.R).
 
 ---
 
