--- a/dashboard.Rmd
+++ b/dashboard.Rmd
@@ -113,12 +113,14 @@ get_trx_by_country_chart = function(desc) {
 }
 ```
 
-Sidebar {.sidebar data-width=330}
+Description {.sidebar data-width=330}
 -------------------------------------
 
 Analysis on purchased items from UK-based and registered non-store online retail. All transactions on this analysis occur between 01/12/2010 and 09/12/2011. For more information about the dataset for this analysis, please have a look at [this link](http://archive.ics.uci.edu/ml/datasets/online+retail). 
 
-Items available are limited using [80/20 rule](https://en.wikipedia.org/wiki/Pareto_principle). More detail about how to do it, have a look at source code [here](https://github.com/iamsniffles/item-analysis-dashboard-demo/blob/master/pre-process.R).
+Note that items available for analysis are limited using [80/20 rule](https://en.wikipedia.org/wiki/Pareto_principle). 
+
+More detail on how to reproduce this dashboard available at [this repo](https://github.com/iamsniffles/item-analysis-dashboard-demo/).
 
 ---
 
